seaqt/QtWidgets/gen_qmdiarea.h

class QBrush;
class QMdiArea;
class QMdiSubWindow;
class QMetaObject;
class QSize;
class QWidget;
typedef struct QActionEvent QActionEvent;
typedef struct QBrush QBrush;
typedef struct QCloseEvent QCloseEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMdiArea QMdiArea;
typedef struct QMdiSubWindow QMdiSubWindow;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QMdiArea_override_virtual_devType(void* self, intptr_t slot);
bool QMdiArea_override_virtual_setVisible(void* self, intptr_t slot);
void QMdiArea_virtualbase_setVisible(void* self, bool visible);
bool QMdiArea_override_virtual_heightForWidth(void* self, intptr_t slot);
int QMdiArea_virtualbase_heightForWidth(const void* self, int param1);
bool QMdiArea_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QMdiArea_virtualbase_hasHeightForWidth(const void* self);
bool QMdiArea_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QMdiArea_virtualbase_paintEngine(const void* self);
bool QMdiArea_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QMdiArea_override_virtual_focusInEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QMdiArea_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QMdiArea_override_virtual_enterEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QMdiArea_override_virtual_leaveEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_leaveEvent(void* self, QEvent* event);
bool QMdiArea_override_virtual_moveEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QMdiArea_override_virtual_closeEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QMdiArea_override_virtual_tabletEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QMdiArea_override_virtual_actionEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QMdiArea_override_virtual_hideEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QMdiArea_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QMdiArea_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QMdiArea_override_virtual_metric(void* self, intptr_t slot);
int QMdiArea_virtualbase_metric(const void* self, int param1);
bool QMdiArea_override_virtual_initPainter(void* self, intptr_t slot);
void QMdiArea_virtualbase_initPainter(const void* self, QPainter* painter);
bool QMdiArea_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QMdiArea_virtualbase_redirected(const void* self, QPoint* offset);
bool QMdiArea_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QMdiArea_virtualbase_sharedPainter(const void* self);
bool QMdiArea_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QMdiArea_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QMdiArea_virtualbase_inputMethodQuery(const void* self, int param1);
bool QMdiArea_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QMdiArea_virtualbase_focusNextPrevChild(void* self, bool next);
bool QMdiArea_override_virtual_customEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_customEvent(void* self, QEvent* event);
bool QMdiArea_override_virtual_connectNotify(void* self, intptr_t slot);
void QMdiArea_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QMdiArea_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QMdiArea_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QMdiArea_staticMetaObject();
void QMdiArea_delete(QMdiArea* self);