seaqt/QtWidgets/gen_qmdiarea.nim

proc fcQMdiArea_override_virtual_devType(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_devType".}
proc fQMdiArea_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QMdiArea_virtualbase_setVisible".}
proc fcQMdiArea_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_setVisible".}
proc fQMdiArea_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QMdiArea_virtualbase_heightForWidth".}
proc fcQMdiArea_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_heightForWidth".}
proc fQMdiArea_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QMdiArea_virtualbase_hasHeightForWidth".}
proc fcQMdiArea_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_hasHeightForWidth".}
proc fQMdiArea_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QMdiArea_virtualbase_paintEngine".}
proc fcQMdiArea_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_paintEngine".}
proc fQMdiArea_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QMdiArea_virtualbase_keyReleaseEvent".}
proc fcQMdiArea_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_keyReleaseEvent".}
proc fQMdiArea_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QMdiArea_virtualbase_focusInEvent".}
proc fcQMdiArea_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_focusInEvent".}
proc fQMdiArea_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QMdiArea_virtualbase_focusOutEvent".}
proc fcQMdiArea_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_focusOutEvent".}
proc fQMdiArea_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QMdiArea_virtualbase_enterEvent".}
proc fcQMdiArea_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_enterEvent".}
proc fQMdiArea_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QMdiArea_virtualbase_leaveEvent".}
proc fcQMdiArea_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_leaveEvent".}
proc fQMdiArea_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QMdiArea_virtualbase_moveEvent".}
proc fcQMdiArea_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_moveEvent".}
proc fQMdiArea_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QMdiArea_virtualbase_closeEvent".}
proc fcQMdiArea_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_closeEvent".}
proc fQMdiArea_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QMdiArea_virtualbase_tabletEvent".}
proc fcQMdiArea_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_tabletEvent".}
proc fQMdiArea_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QMdiArea_virtualbase_actionEvent".}
proc fcQMdiArea_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_actionEvent".}
proc fQMdiArea_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QMdiArea_virtualbase_hideEvent".}
proc fcQMdiArea_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_hideEvent".}
proc fQMdiArea_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QMdiArea_virtualbase_nativeEvent".}
proc fcQMdiArea_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_nativeEvent".}
proc fQMdiArea_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QMdiArea_virtualbase_metric".}
proc fcQMdiArea_override_virtual_metric(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_metric".}
proc fQMdiArea_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QMdiArea_virtualbase_initPainter".}
proc fcQMdiArea_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_initPainter".}
proc fQMdiArea_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QMdiArea_virtualbase_redirected".}
proc fcQMdiArea_override_virtual_redirected(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_redirected".}
proc fQMdiArea_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QMdiArea_virtualbase_sharedPainter".}
proc fcQMdiArea_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_sharedPainter".}
proc fQMdiArea_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QMdiArea_virtualbase_inputMethodEvent".}
proc fcQMdiArea_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_inputMethodEvent".}
proc fQMdiArea_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QMdiArea_virtualbase_inputMethodQuery".}
proc fcQMdiArea_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_inputMethodQuery".}
proc fQMdiArea_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QMdiArea_virtualbase_focusNextPrevChild".}
proc fcQMdiArea_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_focusNextPrevChild".}
proc fQMdiArea_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QMdiArea_virtualbase_customEvent".}
proc fcQMdiArea_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_customEvent".}
proc fQMdiArea_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QMdiArea_virtualbase_connectNotify".}
proc fcQMdiArea_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_connectNotify".}
proc fQMdiArea_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QMdiArea_virtualbase_disconnectNotify".}
proc fcQMdiArea_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_disconnectNotify".}
proc fcQMdiArea_staticMetaObject(): pointer {.importc: "QMdiArea_staticMetaObject".}
proc fcQMdiArea_delete(self: pointer) {.importc: "QMdiArea_delete".}


func init*(T: type gen_qmdiarea_types.QMdiArea, h: ptr cQMdiArea): gen_qmdiarea_types.QMdiArea =
  T(h: h)
proc create*(T: type gen_qmdiarea_types.QMdiArea, parent: gen_qwidget_types.QWidget): gen_qmdiarea_types.QMdiArea =
  gen_qmdiarea_types.QMdiArea.init(fcQMdiArea_new(parent.h))

proc create*(T: type gen_qmdiarea_types.QMdiArea, ): gen_qmdiarea_types.QMdiArea =
  gen_qmdiarea_types.QMdiArea.init(fcQMdiArea_new2())

proc metaObject*(self: gen_qmdiarea_types.QMdiArea, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQMdiArea_metaObject(self.h))

proc metacast*(self: gen_qmdiarea_types.QMdiArea, param1: cstring): pointer =
  fcQMdiArea_metacast(self.h, param1)

proc metacall*(self: gen_qmdiarea_types.QMdiArea, param1: cint, param2: cint, param3: pointer): cint =
  fcQMdiArea_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qmdiarea_types.QMdiArea, s: cstring): string =
  let v_ms = fcQMdiArea_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc sizeHint*(self: gen_qmdiarea_types.QMdiArea, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQMdiArea_sizeHint(self.h))

proc minimumSizeHint*(self: gen_qmdiarea_types.QMdiArea, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQMdiArea_minimumSizeHint(self.h))

proc currentSubWindow*(self: gen_qmdiarea_types.QMdiArea, ): gen_qmdisubwindow_types.QMdiSubWindow =
  gen_qmdisubwindow_types.QMdiSubWindow(h: fcQMdiArea_currentSubWindow(self.h))

proc activeSubWindow*(self: gen_qmdiarea_types.QMdiArea, ): gen_qmdisubwindow_types.QMdiSubWindow =
  gen_qmdisubwindow_types.QMdiSubWindow(h: fcQMdiArea_activeSubWindow(self.h))

proc subWindowList*(self: gen_qmdiarea_types.QMdiArea, ): seq[gen_qmdisubwindow_types.QMdiSubWindow] =
  var v_ma = fcQMdiArea_subWindowList(self.h)
  var vx_ret = newSeq[gen_qmdisubwindow_types.QMdiSubWindow](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qmdisubwindow_types.QMdiSubWindow(h: v_outCast[i])
  vx_ret

proc addSubWindow*(self: gen_qmdiarea_types.QMdiArea, widget: gen_qwidget_types.QWidget): gen_qmdisubwindow_types.QMdiSubWindow =
  gen_qmdisubwindow_types.QMdiSubWindow(h: fcQMdiArea_addSubWindow(self.h, widget.h))

proc removeSubWindow*(self: gen_qmdiarea_types.QMdiArea, widget: gen_qwidget_types.QWidget): void =
  fcQMdiArea_removeSubWindow(self.h, widget.h)

proc background*(self: gen_qmdiarea_types.QMdiArea, ): gen_qbrush_types.QBrush =
  gen_qbrush_types.QBrush(h: fcQMdiArea_background(self.h))

proc setBackground*(self: gen_qmdiarea_types.QMdiArea, background: gen_qbrush_types.QBrush): void =
  fcQMdiArea_setBackground(self.h, background.h)

proc activationOrder*(self: gen_qmdiarea_types.QMdiArea, ): cint =
  cint(fcQMdiArea_activationOrder(self.h))

proc setActivationOrder*(self: gen_qmdiarea_types.QMdiArea, order: cint): void =
  fcQMdiArea_setActivationOrder(self.h, cint(order))

proc setOption*(self: gen_qmdiarea_types.QMdiArea, option: cint): void =
  fcQMdiArea_setOption(self.h, cint(option))

proc testOption*(self: gen_qmdiarea_types.QMdiArea, opton: cint): bool =
  fcQMdiArea_testOption(self.h, cint(opton))

proc setViewMode*(self: gen_qmdiarea_types.QMdiArea, mode: cint): void =
  fcQMdiArea_setViewMode(self.h, cint(mode))

proc viewMode*(self: gen_qmdiarea_types.QMdiArea, ): cint =
  cint(fcQMdiArea_viewMode(self.h))

proc documentMode*(self: gen_qmdiarea_types.QMdiArea, ): bool =
  fcQMdiArea_documentMode(self.h)

proc setDocumentMode*(self: gen_qmdiarea_types.QMdiArea, enabled: bool): void =
  fcQMdiArea_setDocumentMode(self.h, enabled)

proc setTabsClosable*(self: gen_qmdiarea_types.QMdiArea, closable: bool): void =
  fcQMdiArea_setTabsClosable(self.h, closable)

proc tabsClosable*(self: gen_qmdiarea_types.QMdiArea, ): bool =
  fcQMdiArea_tabsClosable(self.h)

proc setTabsMovable*(self: gen_qmdiarea_types.QMdiArea, movable: bool): void =
  fcQMdiArea_setTabsMovable(self.h, movable)

proc tabsMovable*(self: gen_qmdiarea_types.QMdiArea, ): bool =
  fcQMdiArea_tabsMovable(self.h)

proc setTabShape*(self: gen_qmdiarea_types.QMdiArea, shape: cint): void =
  fcQMdiArea_setTabShape(self.h, cint(shape))

proc tabShape*(self: gen_qmdiarea_types.QMdiArea, ): cint =
  cint(fcQMdiArea_tabShape(self.h))

proc setTabPosition*(self: gen_qmdiarea_types.QMdiArea, position: cint): void =
  fcQMdiArea_setTabPosition(self.h, cint(position))

proc tabPosition*(self: gen_qmdiarea_types.QMdiArea, ): cint =
  cint(fcQMdiArea_tabPosition(self.h))

proc subWindowActivated*(self: gen_qmdiarea_types.QMdiArea, param1: gen_qmdisubwindow_types.QMdiSubWindow): void =
  fcQMdiArea_subWindowActivated(self.h, param1.h)

type QMdiAreasubWindowActivatedSlot* = proc(param1: gen_qmdisubwindow_types.QMdiSubWindow)
proc miqt_exec_callback_QMdiArea_subWindowActivated(slot: int, param1: pointer) {.exportc.} =
  let nimfunc = cast[ptr QMdiAreasubWindowActivatedSlot](cast[pointer](slot))
  let slotval1 = gen_qmdisubwindow_types.QMdiSubWindow(h: param1)

  nimfunc[](slotval1)

proc onsubWindowActivated*(self: gen_qmdiarea_types.QMdiArea, slot: QMdiAreasubWindowActivatedSlot) =
  var tmp = new QMdiAreasubWindowActivatedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQMdiArea_connect_subWindowActivated(self.h, cast[int](addr tmp[]))
